bk_ida/gccida/g2/set_block_abstract_flags
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_block_abstract_flags/src/integrate.c:3397:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_block_abstract_flags/src/integrate.c:3398:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *j; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_block_abstract_flags/src/integrate.c:3415:21: error: expected expression
v7 = *( tree_node **)( low + 104); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_block_abstract_flags/src/integrate.c:3415:9: error: use of undeclared identifier 'tree_node'
v7 = *( tree_node **)( low + 104); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_block_abstract_flags/src/integrate.c:3418:25: error: expected expression
if ( v7 != ( tree_node *)global_trees ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_block_abstract_flags/src/integrate.c:3418:14: error: use of undeclared identifier 'tree_node'
if ( v7 != ( tree_node *)global_trees ) 
             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_block_abstract_flags/src/obj/integrate.o] Error 1
